[tool.poetry]
name = "pottery"
version = "3.0.0+zenlytic"
description = "Redis for Humans."
authors = [
    "Rajiv Bakulesh Shah <brainix@gmail.com>",
    "Cole French <cole@zenlytic.com>",
]
license = "Apache 2.0"
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = ">=3.8.1, <4"
annotated-types = "0.6.0"
async-timeout = "4.0.3"
authlib = "1.3.0"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
cryptography = "42.0.5"
docutils = "0.20.1"
dparse = "0.6.4b0"
hiredis = "2.3.2"
idna = "3.6"
importlib-metadata = "7.1.0"
iniconfig = "2.0.0"
jaraco-classes = "3.4.0"
jaraco-context = "5.3.0"
jaraco-functools = "4.0.0"
jinja2 = "3.1.3"
keyring = "25.1.0"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
marshmallow = "3.21.1"
mccabe = "0.7.0"
mdurl = "0.1.2"
mmh3 = "4.1.0"
more-itertools = "10.2.0"
nh3 = "0.2.17"
packaging = "24.0"
pbr = "6.0.0"
pkginfo = "1.10.0"
pluggy = "1.4.0"
pycodestyle = "2.11.1"
pycparser = "2.22"
pydantic = "2.6.4"
pydantic-core = "2.16.3"
pyflakes = "3.2.0"
pygments = "2.17.2"
pyyaml = "6.0.1"
readme-renderer = "43.0"
redis = "5.1.0b4"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rfc3986 = "2.0.0"
rich = "13.7.1"
ruamel-yaml = "0.18.6"
ruamel-yaml-clib = "0.2.8"
safety-schemas = "0.0.2"
shellingham = "1.5.4"
stevedore = "5.2.0"
twine = "5.0.0"
typer = "0.12.1"
typing-extensions = "4.11.0"
urllib3 = "2.2.1"
uvloop = "0.19.0"
zipp = "3.18.1"

[tool.poetry.group.dev.dependencies]
bandit = "1.7.8"
coverage = "7.4.4"
flake8 = "7.0.0"
isort = "5.13.2"
mypy = "1.9.0"
mypy-extensions = "1.0.0"
pytest = "8.1.1"
pytest-asyncio = "0.23.6"
pytest-cov = "5.0.0"
safety = "3.1.0"
types-pyopenssl = "24.0.0.20240311"
types-redis = "4.6.0.20240311"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
