[tool.poetry]
name = "pottery"
version = "3.0.0+zenlytic"
description = "Redis for Humans."
authors = [
    "Rajiv Bakulesh Shah <brainix@gmail.com>",
    "Cole French <cole@zenlytic.com>",
]
license = "Apache 2.0"
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = ">=3.8.1, <4"
redis = "^5.0.4"
typing-extensions = "^4.11.0"
mmh3 = "^4.1.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.8"
coverage = "^7.4.4"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.9.0"
mypy-extensions = "^1.0.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
safety = "^3.1.0"
types-pyopenssl = "^24.0.0.20240311"
types-redis = "^4.6.0.20240311"
uvloop = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
